# handwrite

./: .gitignore  .golangci.yml  CHANGELOG.md  LICENSE  Makefile  README.md  go.mod  go.sum  main.go  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  lint.yml  release.yml
cmd/: config.go  process.go  root.go
handwriting_processor/: .gitignore  config.yaml  main.py  requirements.txt
handwriting_processor/templates/: note_template.md
internal/config/: config.go
internal/gemini/: client.go
internal/processor/: pdf.go
internal/template/: renderer.go
templates/: note_template.md
tests/: config_test.go  processor_test.go  template_test.go  test_main.py
